--- a/css/style.css
+++ b/css/style.css
@@ -73,11 +73,6 @@ body {
 
 .header::after {
   content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  z-index: -1;
-
   display: block;
   width: 100%;
   height: 1px;
@@ -140,7 +135,7 @@ body {
   content: "";
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -1px;
 
   display: block;
   width: 100%;
@@ -686,9 +681,11 @@ body {
 
 .footer-icon-conteiner {
   width: 206px;
+  margin-right: 92px;
 }
 
 .footer-icon-title {
+  display: block;
   margin-bottom: 20px;
 
   font-family: var(--main-font);
@@ -723,6 +720,59 @@ body {
 .footer-icon-list-link:focus {
   background-color: var(--accent-color);
 }
+
+.footer-form-title {
+  display: block;
+  margin-bottom: 20px;
+
+  font-family: var(--main-font);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.143;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--title-dark-theme-color);
+}
+
+.footer-form-element {
+  display: flex;
+}
+
+.footer-form-mail {
+  width: 358px;
+  height: 50px;
+  margin-right: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  background-color: transparent;
+}
+
+.footer-form-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 50px;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  background-color: var(--accent-color);
+  cursor: pointer;
+
+  font-family: var(--main-font);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+
+  color: #FFFFFF;
+}
+
+.footer-form {
+  position: relative;
+}
 /* ========== End Footer ========== */
 
 /* ========== Backdrop ========== */
@@ -754,6 +804,7 @@ body {
   top: 50%;
   left: 50%;
 
+  padding: 40px;
   min-width: 528px;
   min-height: 580px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -782,7 +833,101 @@ body {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-btn:hover {
+.modal-close-btn:hover,
+.modal-close-btn:focus {
   fill: var(--accent-color);
+}
+
+.form-title {
+  display: block;
+  margin-bottom: 12px;
+  text-align: center;
+
+  font-family: var(--main-font);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+  color: var(--title-white-theme-color);
+}
+
+.form-field {
+  display: flex;
+  flex-direction: column;
+
+  font-family: var(--main-font);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.166;
+  letter-spacing: 0.01em;
+  color: var(--text-white-theme-color);
+}
+
+.form-field:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+div.form-field:last-child {
+  margin-bottom: 10px;
+}
+
+.label {
+  margin-bottom: 4px;
+}
+
+.input {
+  width: 448px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.form-input-comment {
+  resize: none;
+  width: 448px;
+  height: 120px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.form-label-policy {
+  display: inline-block;
+  margin-bottom: 30px;
+
+  font-family: var(--main-font);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+  color: var(--text-white-theme-color);
+}
+
+.form-submit-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 50px;
+  margin: 0 auto;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  background-color: var(--accent-color);
+  cursor: pointer;
+
+  font-family: var(--main-font);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+  color: var(--title-dark-theme-color);
 }
 /* ========== End Modal ========== */
