--- a/css/style.css
+++ b/css/style.css
@@ -952,9 +952,9 @@ form::placeholder {
 }
 
 .form-label-policy {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: relative;
+  display: inline-block;
+  padding-left: 36px;
   margin-bottom: 30px;
 
   font-family: var(--main-font);
@@ -966,33 +966,27 @@ form::placeholder {
   color: var(--text-white-theme-color);
 }
 
-.form-input-policy {
-  position: absolute;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-
 .form-icon-policy {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+
   display: inline-block;
   width: 16px;
   height: 16px;
-  margin-right: 8px;
   border: 2px solid var(--title-white-theme-color);
   border-radius: 2px;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
+  background-color: #ffffff;
+
+  transform: translateY(-50%);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input-policy:checked + .form-icon-policy{
-  background-color: var(--accent-color);
-  background-image: url(../images/main/index/modal/icon-modal-ok.svg);
+.form-input-policy:checked + .form-icon-policy {
   border-color: var(--accent-color);
-}
-
-.form-label-policy > a {
-  display: inline-block;
-  margin-left: 4px;
+  background-color: var(--accent-color);
+  background-image: url("../images/main/index/modal/icon-modal-ok.svg");
+  background-origin: border-box;
 }
 
 .form-submit-btn {
