--- a/css/style.css
+++ b/css/style.css
@@ -748,6 +748,7 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   background-color: transparent;
+  color: rgba(255, 255, 255, 0.6);
 
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -876,7 +877,7 @@ body {
 
 .form-title {
   display: block;
-  margin-bottom: 12px;
+  margin-bottom: 30px;
   text-align: center;
 
   font-family: var(--main-font);
@@ -892,7 +893,8 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
-  margin-bottom: 10px;
+  /* padding-top: 18px; */
+  margin-bottom: 28px;
 
   font-family: var(--main-font);
   font-style: normal;
@@ -907,8 +909,58 @@ body {
   margin-bottom: 20px;
 }
 
+@keyframes FormLabel {
+  0% {
+  }
+  50% {
+    transform: translateY(-30px);
+  }
+  100% {
+    transform: translate(-42px, -30px);
+  }
+}
+
 .label-text {
-  margin-bottom: 4px;
+  position: absolute;
+  top: 13px;
+  left: 42px;
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.label-text-comment {
+  position: absolute;
+  top: 13px;
+  left: 16px;
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+
+.form-input-comment::placeholder {
+  opacity: 0;
+}
+
+.input:focus ~ .label-text {
+  transform: translate(-42px, -32px);
+  /* animation: FormLabel 400ms cubic-bezier(0.4, 0, 0.2, 1) forwards; */
+}
+
+.input:focus ~ .label-text-comment {
+  transform: translate(-16px, -32px);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input-comment:focus::placeholder {
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+
+.input:not(:placeholder-shown) ~ .label-text{
+  transform: translate(-42px, -32px);
+}
+
+.input:not(:placeholder-shown) ~ .label-text-comment{
+  transform: translate(-16px, -32px);
 }
 
 .input {
@@ -934,7 +986,7 @@ body {
   outline: none;
 }
 
-.input:focus + .form-icon {
+.input:focus ~ .form-icon {
   fill: var(--accent-color);
 }
 
@@ -966,6 +1018,10 @@ form::placeholder {
   color: var(--text-white-theme-color);
 }
 
+.form-label-policy > a {
+  color: var(--accent-color);
+}
+
 .form-icon-policy {
   position: absolute;
   top: 50%;
@@ -983,7 +1039,7 @@ form::placeholder {
 }
 
 .form-input-policy:checked + .form-icon-policy {
-  border-color: var(--accent-color);
+  border-color: transparent;
   background-color: var(--accent-color);
   background-image: url("../images/main/index/modal/icon-modal-ok.svg");
   background-origin: border-box;
