--- a/css/style.css
+++ b/css/style.css
@@ -56,14 +56,14 @@ body {
 }
 
 .visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
   overflow: hidden;
-  border: 0;
-  clip: rect(0 0 0 0)
 }
 
 /* ========== Header ========== */
@@ -771,7 +771,7 @@ body {
 }
 
 .footer-form-mail:focus::placeholder {
-  color: var(--text-dark-theme-color);
+  color: rgba(255, 255, 255, 0.8);
 }
 
 .footer-form-btn {
@@ -875,6 +875,11 @@ body {
   outline: none;
 }
 
+.form {
+  display: flex;
+  flex-direction: column;
+}
+
 .form-title {
   display: block;
   margin-bottom: 30px;
@@ -891,9 +896,6 @@ body {
 
 .label {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  /* padding-top: 18px; */
   margin-bottom: 28px;
 
   font-family: var(--main-font);
@@ -907,17 +909,6 @@ body {
 
 .label:nth-child(5) {
   margin-bottom: 20px;
-}
-
-@keyframes FormLabel {
-  0% {
-  }
-  50% {
-    transform: translateY(-30px);
-  }
-  100% {
-    transform: translate(-42px, -30px);
-  }
 }
 
 .label-text {
@@ -941,12 +932,11 @@ body {
 }
 
 .input:focus ~ .label-text {
-  transform: translate(-42px, -32px);
-  /* animation: FormLabel 400ms cubic-bezier(0.4, 0, 0.2, 1) forwards; */
+  transform: translate(-42px, -30px);
 }
 
 .input:focus ~ .label-text-comment {
-  transform: translate(-16px, -32px);
+  transform: translate(-16px, -30px);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -956,15 +946,15 @@ body {
 }
 
 .input:not(:placeholder-shown) ~ .label-text{
-  transform: translate(-42px, -32px);
+  transform: translate(-42px, -30px);
 }
 
 .input:not(:placeholder-shown) ~ .label-text-comment{
-  transform: translate(-16px, -32px);
+  transform: translate(-16px, -30px);
 }
 
 .input {
-  width: 448px;
+  width: 100%;
   height: 40px;
   padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
